# test-21vek

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: healthcheck.py  router.py
app/api/events/: __init__.py  views.py
app/config/: __init__.py  db.py  default.py
app/db/: config.py
app/db/dao/: base.py  events.py
app/db/models/: events.py
app/db/models/mixins/: time.py
app/filters/: events.py
app/middleware/: errors.py
app/schemas/: events.py  pagination.py  time.py
migrations/models/: 0_20240919025740_init.py
