[tool.poetry]
name = "test-21vek"
version = "0.0.1"
description = ""
authors = ["Ilya Viarbilo <verbiloilyaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.2"}
pydantic-settings = "^2.5.2"
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.6"}
aerich = "^0.7.2"
orjson = "^3.10.7"



[tool.aerich]
tortoise_orm = "app.db.config.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
